# monitoring

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.runtime  INSTALL.md  Makefile  PRODUCTION.md  README.md  RELEASE.md  build-static.sh  deploy-web.sh  deploy.sh  docker-compose.yml  install-binary.sh  install.sh  serve-web.py  uninstall.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
.kiro/specs/application-refactoring/: design.md  requirements.md  tasks.md
src/: config.rs  dashboard.html  docker_manager.html  error.rs  lib.rs  main.rs  nginx_admin.html  utils.rs
src/docker/: client.rs  handlers.rs  mod.rs  models.rs  routes.rs
src/nginx/: config.rs  handlers.rs  mod.rs  models.rs  routes.rs
src/system/: handlers.rs  mod.rs  models.rs  routes.rs
src/templates/: dashboard.html  docker_manager.html
