[package]
name = "ubuntu_resource_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30"
chrono = { version = "0.4.31", features = ["serde"] }
time = "=0.3.37"
env_logger = "0.11"
log = "0.4"
bollard = "0.16"

[profile.release]
opt-level = 3

[[bin]]
name = "ubuntu_resource_api"
path = "src/main.rs"

# For static binary builds
[profile.release-static]
inherits = "release"
opt-level = 3
strip = true
lto = true
panic = "abort"
codegen-units = 1
